# HelixDB

./: .gitignore  README.md
.github/: FUNDING.yml
docs/: grammar.md
get_routes/: Cargo.toml
get_routes/src/: lib.rs
helix-container/: Cargo.toml
helix-container/src/: main.rs  traversals.rs
helix-engine/: Cargo.toml
helix-engine/benches/: graph_benchmarks.rs
helix-engine/src/: README.md  lib.rs  macros.rs  types.rs
helix-engine/src/graph_core/: README.md  graph_core.rs  graph_methods.rs  mod.rs  traversal.rs  traversal_steps.rs
helix-engine/src/storage_core/: graph.rs  mod.rs  storage_core.rs  storage_methods.rs
helix-enigne/: Cargo.toml
helix-gateway/: Cargo.toml  README.md
helix-gateway/src/: lib.rs
helix-gateway/src/connection/: connection.rs
helix-gateway/src/router/: mod.rs  request.rs  response.rs  router.rs
helix-gateway/src/thread_pool/: thread_pool.rs
helixc/: Cargo.toml  gramma.ebnf  grammar.pest
helixc/src/: main.rs
helixc/src/generator/: generator_example.rs  mod.rs  project_gen.rs  query_gen.rs
helixc/src/parser/: helix_parser.rs  mod.rs  parser.rs  parser_methods.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  request.rs
