[package]
name = "helix-container"
version = "0.1.0"
edition = "2021"

[dependencies]
helix-engine = { path = "../helix-engine" }
protocol = { path = "../protocol" }
helix-gateway = { path = "../helix-gateway" }
helixc = { path = "../helixc" }
chrono = "0.4"
inventory = "0.3.15"
get_routes = { path = "../get_routes" }
rand = "0.8.5"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
