[package]
name = "helix-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
rocksdb = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
tempfile = "3.2"
function_name = "0.3.0"
rand = "0.8.5"
protocol = { path = "../protocol" }

[lib]
name = "helix_engine"
path = "src/lib.rs"

# [[bin]]
# name = "helixengine"
# path = "src/main.rs"
