[package]
name = "helix-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
rocksdb = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
tempfile = "3.2"
function_name = "0.3.0"
rand = "0.8.5"
protocol = { path = "../protocol" }
rayon = "1.10.0"
num_cpus = "1.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
tempfile = "3.2"

[[bench]]
name = "graph_benchmarks"
harness = false

[lib]
name = "helix_engine"
path = "src/lib.rs"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"

[[bin]]
name = "helix_engine"
path = "src/lib.rs"
